Added a very good explanation of why integration is also done on pixels with larger elliptical distances in the manual with a very nice plot!

--- a/doc/MakingPlots/LaTeX/Plots.tex
+++ b/doc/MakingPlots/LaTeX/Plots.tex
@@ -4,10 +4,11 @@
 \usepackage[a4paper, includeheadfoot, body={18.7cm, 25.5cm}]{geometry}
 
 %To define colors:
-\usepackage[cmyk,usenames,dvipsnames]{xcolor}
+\usepackage[usenames,dvipsnames]{xcolor}
 
 %For a tikz environment:
 \usepackage{tikz}
+\usetikzlibrary{plotmarks}
 
 %For drawing plots:
 \usepackage{pgfplots}
@@ -41,6 +42,8 @@
 \input{./BaseFiles/SersicComp.tex}
 
 \input{./BaseFiles/pixfill.tex}
+
+\input{./BaseFiles/checkinteg.tex}
 
 %\cite{Sersicb}.
 
