--- a/doc/MakingPlots/LaTeX/BaseFiles/checkinteg.tex
+++ b/doc/MakingPlots/LaTeX/BaseFiles/checkinteg.tex
@@ -9,16 +9,14 @@
 
       \addplot+ [black, no markers, thick] coordinates {(-1,0.01) (60,0.01)};
 
-      \addplot+ [black, no markers, dashed] coordinates {(4.505,1e-5) (4.505,10)};
-
       \addplot+[only marks, mark=*, scatter, point meta={\thisrow{f}}, 
 	        solid, very thick]
       table [x index=0, y index=1]
-      {./BaseFiles/checkinteg.txt};
+      {./BaseFiles/checkintegall.txt};
 
       \addplot+[only marks, mark=+, mark size=3pt]
       table [x index=0, y index=1]
-      {./BaseFiles/checkinteg2.txt};
+      {./BaseFiles/checkintegcent.txt};
 
     \end{axis}
   \end{tikzpicture}
