--- a/doc/docsrc/mockgals.texinfo
+++ b/doc/docsrc/mockgals.texinfo
@@ -94,9 +94,9 @@ To show the equations in some sections of this manual, we use the the
 @url{http://www.mathjax.org/, MathJax}, JavaScript display
 engine. Therefore to view the Math easily, you have to have JavaScript
 enabled. If it is not enabled, you can still read the math if you are
-familiar with how write equations in TeX: inline equations are marked
+familiar with writting equations in TeX: inline equations are marked
 with @code{\(...\)} and equations that are positioned in the center of
-a separate line for them selves (displayed mathematics) are marked
+a separate line for themselves (displayed mathematics) are marked
 with @code{$$...$$}.
 @end ifhtml
 
@@ -116,7 +116,7 @@ the figures in this address online:
 In general we have two types of equations, inline equations and
 display equations. Inline equations are generally short and are placed
 in between the lines of a paragraph. Display equations are generally
-long and have a devoted line for them selves. In this manual inline
+long and have a devoted line for themselves. In this manual inline
 equations are marked with $...$ (for example $E=mc^2$) and display
 equations are marked in a separate line with $$...$$, for example:
 
@@ -210,10 +210,10 @@ of science.
 
 With the progress of technology, scientific results are increasingly
 becoming more and more dependent on hardware and software
-techniques. While in the past, a scientists would gather data and
+techniques. While in the past, scientists would gather data and
 process them individually to achieve an analysis, today scientits
 mainly leave the first two steps to pre-written software libraries,
-therefore distancing them selves from the pure observational data.
+therefore distancing themselves from the pure observational data.
 
 @quotation
 Unfortunately, most persons who have recourse to a computer for
@@ -282,7 +282,7 @@ in the program that will make it much more accurate and user friendly.
 
 Bjarne Stroustrup (creator of the C++ language) says: ``Without
 understanding software, you are reduced to believing in magic''.  Ken
-Thomson (the designer or the Unix operating system) has says ``I abhor
+Thomson (the designer or the Unix operating system) says ``I abhor
 a system designed for the ``user'' if that word is a coded pejorative
 meaning ``stupid and unsophisticated''.'' No scientist would want to
 be considered as ``stupid and unsophisticated'', so both these cases
@@ -291,7 +291,7 @@ applications and as scientists we should be loyal to such principles
 if we want to remain critical and be objective. 
 
 All our data and models are produced, archived and processed using
-hardware and software. If our aim in pursing science is tackling the
+hardware and software. If our aim in pursuing science is tackling the
 riddles of nature, and not merely stacking published papers with our
 names on them, we cannot and should not accept any result through
 faith in the programmer who wrote that particular program(s) which
@@ -314,14 +314,14 @@ version of MockGals that they might get from you.
 
 Specifically, we want to make sure that you have the right to give
 away copies of the programs that relate to MockGals, that you receive
-source code or else can get it if you want it, that you can change these
+the source code or else can get it if you want it, that you can change these
 programs or use pieces of them in new free programs, and that you know
 you can do these things.
 
 To make sure that everyone has such rights, we have to forbid you to
 deprive anyone else of these rights.  For example, if you distribute
 copies of the MockGals related programs, you must give the recipients
-all the lrights that you have.  You must make sure that they, too,
+all the rights that you have.  You must make sure that they, too,
 receive or can get the source code.  And you must tell them their
 rights.
 
@@ -366,7 +366,7 @@ in programming and in your GNU based operating systems user
 experience.  Operating systems like Ubuntu, Fedora, Linux Mint,
 Debian, OpenSUSE, Red Hat, CentOS or Scientific linux among many
 others. Info is very trivial and made for reading manuals. It provides
-facilitates to navigate easily in long manuals. To learn more about it
+facilities to navigate easily in long manuals. To learn more about it
 in any GNU/linux terminal you can run: @command{$ info info}. It does
 a fantastic job in explaining its self in practice interactively.
 
@@ -413,7 +413,7 @@ and if it is correct you will gain super-user privileges.
 The @command{commands}, @option{-options}, @file{file_names},
 @code{programming_codes} and keyboard @kbd{keys} in this manual are
 written as they are written here. Be careful not to include text
-puctuation marks that might follow them.
+punctuation marks that might follow them.
 
 @item
 When mentioning the order of menus to choose on a graphical user
@@ -471,7 +471,7 @@ image. @ref{quickpreview} shows one such random example.  The central
 positions of some of these random profiles is intentionally placed
 outside of the actual image range in order to be more
 realistic. MockGals ignores objects that are completely out of the
-image, but if even a small fraction of their area (within the defined
+image, but even if a small fraction of their area (within the defined
 truncation radius) falls within the image, that part will be included.
 
 @float Figure, quickpreview
