Added plots to the documentation to show both the pixel integration and also pixel placing in the profile.

--- a/doc/MakingPlots/LaTeX/BaseFiles/checkinteg.tex
+++ b/doc/MakingPlots/LaTeX/BaseFiles/checkinteg.tex
@@ -1,5 +1,48 @@
 \begin{figure}[t]
   \centering
+
+  \begin{tikzpicture}
+    \begin{axis}[ymode=log, ymin=0.00001, ymax=1,
+        xmin=0, xmax=50, width=\linewidth, height=0.4\linewidth, 
+        xlabel=Radius ($r_{el}$), ylabel=$|I_i-I_c|/I_i$, colorbar horizontal,
+        colormap/bluered, 
+        colorbar style={at={(0.5,1.03)}, anchor=south, xticklabel pos=upper}]
+
+      \addplot+ [black, no markers, thick] coordinates {(-1,0.01) (60,0.01)};
+
+      \addplot+[only marks, mark=*, scatter, point meta={\thisrow{f}}, 
+	        solid, very thick]
+      table [x index=0, y index=1]
+      {./BaseFiles/checkintegcircall.txt};
+
+      \addplot+[only marks, mark=+, mark size=3pt]
+      table [x index=0, y index=1]
+      {./BaseFiles/checkintegcirccent.txt};
+
+    \end{axis}
+  \end{tikzpicture}
+
+  \begin{tikzpicture}
+    \begin{axis}[ymode=log, ymin=0.00001, ymax=1,
+        xmin=0, xmax=50, width=\linewidth, height=0.4\linewidth, 
+        xlabel=Radius ($r_{el}$), ylabel=$|I_i-I_c|/I_i$, colorbar horizontal,
+        colormap/bluered, 
+        colorbar style={at={(0.5,1.03)}, anchor=south, xticklabel pos=upper}]
+
+      \addplot+ [black, no markers, thick] coordinates {(-1,0.01) (60,0.01)};
+
+      \addplot+[only marks, mark=*, scatter, point meta={\thisrow{f}}, 
+	        solid, very thick]
+      table [x index=0, y index=1]
+      {./BaseFiles/checkintegq65all.txt};
+
+      \addplot+[only marks, mark=+, mark size=3pt]
+      table [x index=0, y index=1]
+      {./BaseFiles/checkintegq65cent.txt};
+
+    \end{axis}
+  \end{tikzpicture}
+
   \begin{tikzpicture}
     \begin{axis}[ymode=log, ymin=0.00001, ymax=1,
         xmin=0, xmax=50, width=\linewidth, height=0.4\linewidth, 
@@ -20,4 +63,6 @@
 
     \end{axis}
   \end{tikzpicture}
+
+
 \end{figure}
