--- a/doc/MakingPlots/LaTeX/Plots.tex
+++ b/doc/MakingPlots/LaTeX/Plots.tex
@@ -41,7 +41,7 @@
 
 \input{./BaseFiles/SersicComp.tex}
 
-\input{./BaseFiles/pixfill.tex}
+\input{./BaseFiles/integpixfill.tex}
 
 \input{./BaseFiles/checkinteg.tex}
 
